<resources>
    <string name="app_name">DicodingStory</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_email">Not a valid Email Address</string>
    <string name="invalid_password">Password should be at least 6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="not_registered_create_account">Not registered yet? Create account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create your account</string>
    <string name="full_name">Full Name</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="register_success">Success registering your account</string>
    <string name="welcome">Welcome %1$s</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure to logout?</string>
    <string name="coordinates">(%1$f, %2$f)</string>
    <string name="description_story_image">Image of story</string>
    <string name="add_new_story">Add new story</string>
    <string name="detail_story">Detail Story</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="preview_image_upload">Preview Image Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="empty_description">Description cannot be empty</string>
    <string name="empty_image">Image cannot be empty</string>
    <string name="create_story_success">Success creating new story</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="camera_preview_back_button">Camera preview back</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="get_my_location">Get location</string>
    <string name="no_location_detected">No Location Detected</string>
</resources>