<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.authentication.presentation.login.pages.LoginFragment">

    <dev.adryanev.dicodingstory.shared.presentation.widgets.EmailTextInput
        android:id="@+id/login_email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_subtitle" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/poppins"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/please_login_to_continue"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/login_title"
        app:layout_constraintStart_toStartOf="@+id/login_title"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        tools:text="@string/please_login_to_continue" />

    <dev.adryanev.dicodingstory.shared.presentation.widgets.PasswordTextInput
        android:id="@+id/login_password_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/login_email_input"
        app:layout_constraintStart_toStartOf="@+id/login_email_input"
        app:layout_constraintTop_toBottomOf="@+id/login_email_input" />

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:text="@string/login"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_input"
        tools:text="@string/login" />

    <TextView
        android:id="@+id/login_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered_create_account"
        android:textColor="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_login_button"
        app:layout_constraintVertical_bias="0.84000003"
        tools:text="@string/not_registered_create_account" />
</androidx.constraintlayout.widget.ConstraintLayout>