<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_story_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.story.presentation.new_story.pages.NewStoryFragment">

    <include
        android:id="@+id/new_story_toolbar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/new_story_preview_image"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/preview_image_upload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/new_story_camera_button"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/camera"
                app:icon="@drawable/ic_baseline_photo_camera_24"
                app:layout_constraintEnd_toStartOf="@+id/new_story_gallery_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_story_preview_image"
                tools:text="@string/camera" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/new_story_gallery_button"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/gallery"
                app:icon="@drawable/ic_baseline_image_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/new_story_camera_button"
                app:layout_constraintTop_toTopOf="@+id/new_story_camera_button"
                tools:text="@string/gallery" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_story_description_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_story_gallery_button">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_story_description_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="192dp"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:singleLine="false"
                    android:textColorHint="#546E7A" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/new_story_upload_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:text="@string/upload"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_story_description_text_input_layout"
                tools:text="@string/upload" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>