<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.authentication.presentation.register.pages.RegisterFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/register_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <dev.adryanev.dicodingstory.shared.presentation.widgets.EmailTextInput
            android:id="@+id/register_email_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/register_name_input"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/register_name_input"
            app:layout_constraintTop_toBottomOf="@+id/register_name_input" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:fontFamily="@font/poppins"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/primaryColor"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/register_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/create_your_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="@+id/register_title"
            app:layout_constraintStart_toStartOf="@+id/register_title"
            app:layout_constraintTop_toBottomOf="@+id/register_title"
            tools:text="@string/create_your_account" />

        <dev.adryanev.dicodingstory.shared.presentation.widgets.PasswordTextInput
            android:id="@+id/register_password_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/register_email_input"
            app:layout_constraintStart_toStartOf="@+id/register_email_input"
            app:layout_constraintTop_toBottomOf="@+id/register_email_input" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:text="@string/register"
            android:textSize="14sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password_input"
            tools:text="@string/register" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_subtitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
